// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toHydrationLoadersApplied with mount points should apply correct hydration loaders when isLazy is false 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-path=\\"/nice.jsx\\" data-s-lazy=\\"false\\" data-s-instance=\\"0\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/more/Nested.jsx\\" data-s-lazy=\\"false\\" data-s-instance=\\"1\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/index.jsx\\" data-s-lazy=\\"false\\" data-s-instance=\\"2\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>


<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
            import { renderComponent } from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
            import Component from \\"//nice.jsx\\";
            renderComponent({
              Component,
              componentPath: \\"/nice.jsx\\",
              instance: \\"0\\",
              props: {},
            });
          </script><script type=\\"module\\">
            import { renderComponent } from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
            import Component from \\"//more/Nested.jsx\\";
            renderComponent({
              Component,
              componentPath: \\"/more/Nested.jsx\\",
              instance: \\"1\\",
              props: {},
            });
          </script><script type=\\"module\\">
            import { renderComponent } from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
            import Component from \\"//index.jsx\\";
            renderComponent({
              Component,
              componentPath: \\"/index.jsx\\",
              instance: \\"2\\",
              props: {},
            });
          </script>
		</body>
</html>"
`;

exports[`toHydrationLoadersApplied with mount points should apply correct hydration loaders when isLazy is true 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-path=\\"/nice.jsx\\" data-s-lazy=\\"true\\" data-s-instance=\\"0\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/more/Nested.jsx\\" data-s-lazy=\\"true\\" data-s-instance=\\"1\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/index.jsx\\" data-s-lazy=\\"true\\" data-s-instance=\\"2\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>


<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<template data-s-path=\\"/nice.jsx\\" data-s-instance=\\"0\\"><script type=\\"module\\">
            import { renderComponent } from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
            import Component from \\"//nice.jsx\\";
            renderComponent({
              Component,
              componentPath: \\"/nice.jsx\\",
              instance: \\"0\\",
              props: {},
            });
          </script></template><template data-s-path=\\"/more/Nested.jsx\\" data-s-instance=\\"1\\"><script type=\\"module\\">
            import { renderComponent } from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
            import Component from \\"//more/Nested.jsx\\";
            renderComponent({
              Component,
              componentPath: \\"/more/Nested.jsx\\",
              instance: \\"1\\",
              props: {},
            });
          </script></template><template data-s-path=\\"/index.jsx\\" data-s-instance=\\"2\\"><script type=\\"module\\">
            import { renderComponent } from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
            import Component from \\"//index.jsx\\";
            renderComponent({
              Component,
              componentPath: \\"/index.jsx\\",
              instance: \\"2\\",
              props: {},
            });
          </script></template>
		</body>
</html>"
`;

exports[`toHydrationLoadersApplied with mount points should apply correct props based on componentToPropsMap 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-path=\\"/nav.jsx\\" data-s-lazy=\\"true\\" data-s-instance=\\"0\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/nested/Heading.jsx\\" data-s-lazy=\\"false\\" data-s-instance=\\"1\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/index.jsx\\" data-s-lazy=\\"true\\" data-s-instance=\\"2\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>


<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<template data-s-path=\\"/nav.jsx\\" data-s-instance=\\"0\\"><script type=\\"module\\">
            import { renderComponent } from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
            import Component from \\"//nav.jsx\\";
            renderComponent({
              Component,
              componentPath: \\"/nav.jsx\\",
              instance: \\"0\\",
              props: {firstProp:'nice',secondProp:42,thirdProp:false,helper() {
  return 'Testing non-JSON properties';
}},
            });
          </script></template><script type=\\"module\\">
            import { renderComponent } from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
            import Component from \\"//nested/Heading.jsx\\";
            renderComponent({
              Component,
              componentPath: \\"/nested/Heading.jsx\\",
              instance: \\"1\\",
              props: {text:{weight:'bold',content:'Welcome to the site'}},
            });
          </script><template data-s-path=\\"/index.jsx\\" data-s-instance=\\"2\\"><script type=\\"module\\">
            import { renderComponent } from \\"slinkity/lib/plugin/reactPlugin/_slinkity-react-mount-point.js\\";
            import Component from \\"//index.jsx\\";
            renderComponent({
              Component,
              componentPath: \\"/index.jsx\\",
              instance: \\"2\\",
              props: {list:['Have a nice day world']},
            });
          </script></template>
		</body>
</html>"
`;
